k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evertwine
  labels:
    name: evertwine
    environment: production
    app: evertwine
